--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,13 +24,16 @@ jobs:
       - name: Run linting
         run: bun run lint
 
+      - name: Pull environment variables
+        run: vercel env pull --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+
       - name: Build Next.js app
         run: bun run build
+        env:
+          DISABLE_ESLINT_PLUGIN: true
 
       - name: Install Vercel CLI
         run: bun install -g vercel@latest
-      - name: Pull environment variables
-        run: vercel env pull --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Run database migrations
         run: bun run db:migrate
