:memo: Update some missed documentation

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@ NEXTAUTH_URL=""
 # Next Auth Discord Provider
 AUTH_DISCORD_ID=""
 AUTH_DISCORD_SECRET=""
+AUTH_GOOGLE_SECRET=""
+AUTH_GOOGLE_ID=""
 
 # Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/hx2-audience"
+DATABASE_URL="postgresql://test:test@localhost:5432/test"
+SENTRY_AUTH_TOKEN=""
