--- a/.env.example
+++ b/.env.example
@@ -24,4 +24,10 @@ AUTH_GOOGLE_ID=""
 
 # Drizzle
 DATABASE_URL="postgresql://test:test@localhost:5432/test"
+
 SENTRY_AUTH_TOKEN=""
+
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL=""
+NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=""
+SUPABASE_SECRET_KEY=""
