--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           bun-version: latest
 
+      - uses: supabase/setup-cli@v1
+        with:
+          version: latest
       - uses: actions/cache@v4
         with:
           path: |
@@ -44,8 +47,8 @@ jobs:
       - name: Build Next.js app
         run: bun run build
 
-      - name: Run database migrations
-        run: source .env && bun run db:migrate
+      - run: supabase link --project-ref $SUPABASE_PROJECT_ID
+      - run: supabase db push
 
       - name: Deploy to Vercel
         run: |
