--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^1.7.2",
     "@hookform/resolvers": "^5.2.1",
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
@@ -45,6 +44,8 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@sentry/nextjs": "10",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.57.2",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
@@ -60,7 +61,6 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.542.0",
     "next": "^15.2.3",
-    "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.4",
     "radashi": "^12.6.2",
