--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,5 +40,5 @@
     "**/*.js",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/adapters/db/database.types.ts"]
 }
