--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "remark-math": "^6.0.0",
     "server-only": "^0.0.1",
     "shiki": "^3.12.2",
+    "socket.io": "^4.8.1",
     "sonner": "^2.0.7",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.3.1",
