--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "fp-ts": "^2.16.11",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.542.0",
-    "next": "^16.0.10",
+    "next": "15.5.7",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.4",
     "radashi": "^12.6.2",
