:white_check_mark: Add e2e tests

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,10 @@ devops/db/data
 
 *storybook.log
 storybook-static
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
