--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,6 +4,12 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+
+env:
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+  CI: true
+
 jobs:
   test:
     timeout-minutes: 60
@@ -18,6 +24,9 @@ jobs:
       - name: Install dependencies
         run: bun install
 
+      - name: Install Vercel CLI
+        run: bun install -g vercel@latest
+
       - name: Pull environment variables
         run: vercel env pull --environment=production --token=${{ secrets.VERCEL_TOKEN }} .env
 
@@ -26,14 +35,19 @@ jobs:
           version: latest
 
       - name: Start Supabase
-        run: supabase start
+        run: supabase start -x=storage-api,imgproxy,inbucket,edge-runtime,logflare,vector
 
       - name: Setup local supabase environment variables
         # Grab the environment variables from the supabase project and merge them with the local .env file
         # https://stackoverflow.com/q/57691556
         run: |
           supabase status -o env >> .env.supabase
-          sort -u -t '=' -k 1,1 .env .env.supabase | grep -v '^$\|^\s*\#' > .env
+          sed -i 's/^ANON_KEY=/NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=/' .env.supabase
+          sed -i 's/^API_URL=/NEXT_PUBLIC_SUPABASE_URL=/' .env.supabase
+          sed -i 's/^DB_URL=/DATABASE_URL=/' .env.supabase
+          sed -i 's/^SERVICE_ROLE_KEY=/SUPABASE_SECRET_KEY=/' .env.supabase
+          sort -u -t '=' -k 1,1 .env .env.supabase | grep -v '^$\|^\s*\#' > .env.deduplicated
+          mv .env.deduplicated .env
 
       - name: Build the app
         run: bun run build
